[package]
name = "candle-onnx-export"
version = "0.11.0"
edition = "2021"

description = "Explicit ONNX export helpers for Candle models."
repository = "https://github.com/huggingface/candle"
keywords = ["candle", "onnx", "machine-learning", "export"]
categories = ["science", "encoding"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
prost = "0.14.1"
thiserror = "2.0"

candle-core = { path = "../candle-core", package = "candle-core", version = "0.11.0" }
candle-nn = { path = "../candle-nn", version = "0.11.0" }

